``` feat: Enhance testing and update dependencies
This commit includes several improvements and updates related to testing and dependency management.
- Update Byte Buddy to version
``````
1.14.11, and add it to dependencies to address issues with Java 21 support.
- Modify test configuration to add the '-Dnet.bytebuddy.experimental=true' JVM argument.
- Modify the loadCities method in WeatherViewModel to collect only the first emission and skip initial
``````
 `NavigationState.Idle`.
- Improve WeatherViewModelTest:
    - Add mock to handle an empty list in `getCitiesUseCase`.
    - Add timeouts for `test` scope functions.
    - Add test for `loadCities` to check default city loading when none exist.
    - Add test for `loadCities` to check data loading from source.
    - Add test to ensure `addCity` calls `addCityUseCase`.
- Remove the configuration for DetailsScreenTest in `deploymentTargetSelector.xml`.
```